# generals-familiar

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  zizmor.yml
pages/: index.html
scss/: style.scss
src/: main.rs  opr_data.rs  widgets.rs
src/opr_data/: static_data.rs
style/: main.scss
xtasks/: Cargo.toml
xtasks/src/: post_build.rs
