[package]
name = "generals-familiar"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = { version = "0.1.0", optional = true }
gloo-net = ">=0.5, <0.7"
icondata = { version = "0.4.0", default-features = false, features = ["ionicons"] }
leptos = { version = "0.6.11", default-features = false, features = ["csr"] }
leptos_macro = { version = "0.6.0", features = ["csr"] }
leptos_meta = { version = "0.6.0", features = ["csr"] }
leptos_router = { version = "0.6.0", features = ["csr"] }
serde = { version = "1.0.0" }

[patch.crates-io]
#leptos = {path = "../leptos/leptos"}
#leptos_macro = {path = "../leptos/leptos_macro"}
#leptos_meta = {path = "../leptos/meta"}
#leptos_router = {path = "../leptos/router"}

leptos = {git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.6"}
leptos_macro = {git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.6"}
leptos_meta = {git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.6"}
leptos_router = {git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.6"}

[dependencies.thaw]
features = ["csr"]
#version = "0.3.4"
git = "https://github.com/thaw-ui/thaw"
branch = "thaw-v0.3"

[build-dependencies.opr-test-data]
git = "https://github.com/ydirson/opr-rs"
optional = true
rev = "854d192c8c85fe09b1b635e1c42e114363353cba"
[dependencies.opr]
git = "https://github.com/ydirson/opr-rs"
rev = "854d192c8c85fe09b1b635e1c42e114363353cba"

#[patch."https://github.com/ydirson/opr-rs"]
#opr = {path = "../opr-rs/opr"}
#opr-test-data = {path = "../opr-rs/opr-test-data"}

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[build-dependencies]
cfg-if = "1.0.0"

[features]
dev = ["dep:console_error_panic_hook"]
local-files = ["dep:opr-test-data", "opr/local-files"]
