[package]
name = "generals-familiar"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = { version = "0.1.0", optional = true }
gloo-net = "0.5"
leptos = { version = "0.6.11", default-features = false, features = ["csr"] }
leptos_macro = { version = "0.7.0", features = ["csr"] }
leptos_meta = { version = "0.6.0", features = ["csr"] }
leptos_router = { version = "0.6.0", features = ["csr"] }
serde = { version = "1.0.0" }

[dependencies.leptonic]
#version = "0.5.0"
git = "https://github.com/ydirson/leptonic/"
branch = "leptonic-0.5"
#path = "../leptonic/leptonic"
# leptonic does not like leptos' "nightly"
features = ["csr"]

[build-dependencies.opr-test-data]
git = "https://github.com/ydirson/opr-rs"
optional = true
rev = "68b2f48d1581d829bc7708ba6e024fc716cbb46a"
#path = "../opr-rs/opr-test-data"
[dependencies.opr]
git = "https://github.com/ydirson/opr-rs"
rev = "68b2f48d1581d829bc7708ba6e024fc716cbb46a"
#path = "../opr-rs/opr"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[build-dependencies]
cfg-if = "1.0.0"

[features]
dev = ["dep:console_error_panic_hook"]
local-files = ["dep:opr-test-data", "opr/local-files"]

[package.metadata.leptonic]
style-dir = "style"
js-dir = "public/js"
