[package]
name = "generals-familiar"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

[dependencies]
console_error_panic_hook = { version = "0.1.0", optional = true }
gloo-net = ">=0.5, <0.7"
icondata = { version = ">=0.4.0, <0.7", default-features = false, features = ["ionicons"] }
leptos = { version = "0.7.0", default-features = false, features = ["csr"] }
leptos_macro = { version = "0.7.0", features = ["csr"] }
leptos_meta = "0.7.0"
leptos_router = "0.7.0"
serde = { version = "1.0.0" }
thaw = { version = "0.4.0", features = ["csr"]}
thaw_macro = "0.1.0"

# those we don't use directly but have to be in sync when using a prerelease
#leptos_config = "=0.7.0-rc2"
#leptos_dom = "=0.7.0-rc2"
#leptos_hot_reload = "=0.7.0-rc2"
#leptos_router_macro = "=0.7.0-rc2"
#leptos_server = "=0.7.0-rc2"
#next_tuple = "=0.1.0-rc2"
#reactive_graph = "=0.1.0-rc2"
#reactive_stores_macro = "=0.1.0-rc2"
#server_fn = "=0.7.0-rc2"
#server_fn_macro = "=0.7.0-rc2"
#server_fn_macro_default = "=0.7.0-rc2.0"
#tachys = "=0.1.0-rc2"
#throw_error = "=0.2.0-rc2"

[patch.crates-io]
#leptos = {path = "../leptos/leptos"}
#leptos_macro = {path = "../leptos/leptos_macro"}
#leptos_meta = {path = "../leptos/meta"}
#leptos_router = {path = "../leptos/router"}

#leptos = {git = "https://github.com/ydirson/leptos", branch = "beta5"}
#leptos_macro = {git = "https://github.com/ydirson/leptos", branch = "beta5"}
#leptos_meta = {git = "https://github.com/ydirson/leptos", branch = "beta5"}
#leptos_router = {git = "https://github.com/ydirson/leptos", branch = "beta5"}

#[patch.crates-io.thaw]
##path = "../thaw/thaw"
#git = "https://github.com/thaw-ui/thaw"
#rev = "8563f046b0b1b1aaa6016b88f21a5c30bc2fbdde"

[build-dependencies.opr-test-data]
git = "https://github.com/ydirson/opr-rs"
optional = true
rev = "41a07089b16ef33576eb39e4ca894ff28ef18667"
[dependencies.opr]
git = "https://github.com/ydirson/opr-rs"
rev = "41a07089b16ef33576eb39e4ca894ff28ef18667"

#[patch."https://github.com/ydirson/opr-rs"]
#opr = {path = "../opr-rs/opr"}
#opr-test-data = {path = "../opr-rs/opr-test-data"}

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[build-dependencies]
cfg-if = "1.0.0"

[features]
dev = ["dep:console_error_panic_hook"]
local-files = ["dep:opr-test-data", "opr/local-files"]
